[package]
name = "ESPlayground"
version = "0.1.0"
authors = ["yrakcaz <zackaryayoun@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"
description = "Playing around with the ESP32 SoC"
license = "MIT"
repository = "https://github.com/yrakcaz/ESPlayground.git"
readme = "README.md"
keywords = ["ESP32", "SoC", "playground"]
categories = ["embedded", "rust", "esp32"]

[[bin]]
name = "ESPlayground"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.93"
esp-idf-sys = "0.35.0"
embedded-hal = "=0.2.7"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released

[lints.clippy]
multiple_crate_versions = { level="allow", priority=1 }
all = "deny"
cargo = "deny"
pedantic = "deny"
